Oct 29, 2007

* ADDED: Support for local operators in comment parser.

* ADDED: library(doc_latex): generate LaTeX from Wiki files and Prolog
  source files.

Oct 16, 2007

* ADDED: Source-reference to individual predicates.

* ENHANCED: Introduce path aliases to get constant paths for the SWI-Prolog
  library.

Sep 10, 2007

* FIXED: Search for comments with multiple modes.

Aug 8, 2007

* FIXED: * _\n (Anjo Anjewierden).

Aug 2, 2007

* ADDED: Support rewriting prolog flag references

Jun 21, 2007

* ADDED: Version indication.

* ADDED: Deal with edit/non-edit when accessed from behind an Apache
  reverse proxy.

Jun 8, 2007

* DOCS: Updated some details in the documentation.

May 24, 2007

* ADDED: Work in progress to emit stand-alone HTML documentation files.

Apr 11, 2007

* FIXED: Two syntax errors in pldoc.css.

Mar 22, 2007

* ADDED: Allow for inline images using [[file.png]].   Anjo Anjewierden.

Mar 21, 2007

* ADDED: Create link to image files on file.gif, file.png, file.jpg
  or file.jpeg.   Anjo Anjewierden.

* ADDED: Sort files in directory.  Anjo Anjewierden.

* ADDED: Document determinism values (det, nondet, etc.).  Anjo Anjewierden.

* FIXED: typo in docuementation.  Anjo Anjewierden.

Mar 20, 2007

* FIXED: Broken HTML for radio buttons.

Feb 9, 2007

* FIXED: Use HTTP 303 for initial redirection to avoid old redirects.

Jan 3, 2007

* FIXED: Section handling of the manual

Oct 30, 2006

* FIXED: Bug handling trailing whitespace in structured comments.

Oct 6, 2006

* FIXED: Bug#222: Allow connection from localhost using doc_server/1
  on Windows (some installations).  Holger Kanwischer and Mark van
  Assem.

Oct 4, 2006

* FIXED _foo and -foo.  Alexey Ilyukhin.

Sep 19, 2006

* Undefined procedure: pldoc_index:term/4 when using term-lists in README
  or TODO.  Alexey Ilyukhin.

* FIXED: Bug in allow/deny.  Alexey Ilyukhin.

Sep 15, 2006

* ENHANCED: logging

Sep 14, 2006

* FIXED: allow/deny code handling.  Steve Moyle.

Sep 10, 2006
